# Voxels

./: CMakeLists.txt  Camera.h  Chunk.h  Common.h  Frustum.cpp  InfiniteWorld.h  README.md  idk.cpp  main.cpp  voxels
include/: Common.h  Frustum.h
include/Engine/: Camera.h  Chunk.h  InfiniteWorld.h
include/Generation/: Biomes.h  Noise.h
src/: main.cpp
src/Engine/: Camera.cpp  Chunk.cpp  InfiniteWorld.cpp
src/Generation/: Biome.cpp  Noise.cpp
